--- a/mos.yml
+++ b/mos.yml
@@ -1,9 +1,9 @@
 author: mamuesp
 description: A bunch of basic functions you need everywhere ...
 version: 0.1
-#libs_version: ${mos.version}
-#modules_version: ${mos.version}
-#mongoose_os_version: ${mos.version}
+libs_version: ${mos.version}
+modules_version: ${mos.version}
+mongoose_os_version: ${mos.version}
 
 config_schema:
   - ["common_tools", "o", {title: "Tool collection settings"}]
